Add eBay SOAP API bindings and update XSD schema
- Introduced new JAXB bindings for eBay SOAP API requests and responses, including RegisterUserRequest, CreateListingRequest, and others.
- Updated the XSD schema to reflect changes in the API, including new types for bids and listings.
- Removed deprecated user-related endpoints and requests from the codebase.
- Modified test scripts to align with the new API structure, focusing on user registration functionality.
- Ensured backward compatibility by maintaining existing request/response structures where necessary.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/ws/ebay.wsdl"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
